--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=aa0668411@gmail.com
+MAIL_PASSWORD=admin217
+MAIL_ENCRYPTION=tls
