--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravelcollective/html": "5.2.*",
         "netshell/paypal": "dev-master",
         "gloudemans/shoppingcart": "^1.3",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
